ticketing/infra/k8s/auth.mongo.service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: auth-mongo
  type: ClusterIP
  ports:
  - name: auth-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
