ticketing/infra/k8s/auth.service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth
    protocol: TCP
    port: 3000
    targetPort: 3000
